--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,8 +36,8 @@
       </div>
     </header>
 
-    <main class="grid lg:grid-cols-3 gap-6 mb-10">
-      <div class="glass card">
+    <main class="grid grid-cols-1 gap-6 mb-10">
+      <div class="glass card lg:col-span-2">
         <h2 class="card-title flex items-center gap-2"><i data-lucide="sprout" class="icon-sm"></i> Create Product (Farmer)</h2>
         <label class="field-label">Product ID</label>
         <input id="cpId" class="field-input" placeholder="e.g., 1001" />
@@ -73,25 +73,41 @@
 
       <div class="glass card">
         <h2 class="card-title flex items-center gap-2"><i data-lucide="file-plus" class="icon-sm"></i> Metadata (IPFS/Web3.Storage)</h2>
-        <p class="text-xs text-slate-300/80 mb-2">Option A: Upload a file with a Web3.Storage token. Option B: Paste an existing CID and set it on-chain.</p>
-        <label class="field-label">Product ID</label>
-        <input id="mdId" class="field-input" placeholder="1001" />
-        <label class="field-label">Web3.Storage API Token (optional)</label>
-        <input id="w3sToken" class="field-input" placeholder="eyJhbGciOi..." />
-        <label class="field-label">Select File (image/json)</label>
-        <input id="mdFile" type="file" class="field-input" />
-        <div class="flex gap-2 mt-2">
-          <button id="uploadBtn" class="btn-info flex-1 flex items-center justify-center gap-2">
-            <i data-lucide="upload" class="icon-sm"></i>
-            <span>Upload to Web3.Storage</span>
-          </button>
+        <p class="text-xs text-slate-300/80 mb-4">Option A: Upload a file with a Web3.Storage token. Option B: Paste an existing CID and set it on-chain.</p>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+          <div>
+            <label class="field-label">Product ID</label>
+            <input id="mdId" class="field-input" placeholder="1001" />
+          </div>
+          <div>
+            <label class="field-label">Web3.Storage API Token (optional)</label>
+            <input id="w3sToken" class="field-input" placeholder="eyJhbGciOi..." />
+          </div>
+
+          <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-3 gap-3">
+            <div class="md:col-span-2">
+              <label class="field-label">Select File (image/json)</label>
+              <input id="mdFile" type="file" class="field-input" />
+            </div>
+            <div class="flex items-end">
+              <button id="uploadBtn" class="btn-info w-full flex items-center justify-center gap-2">
+                <i data-lucide="upload" class="icon-sm"></i>
+                <span>Upload to Web3.Storage</span>
+              </button>
+            </div>
+          </div>
+
+          <div class="md:col-span-2">
+            <label class="field-label mt-1">Or paste CID</label>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+              <input id="mdCid" class="field-input md:col-span-2" placeholder="bafy..." />
+              <button id="setCidBtn" class="btn-primary w-full flex items-center justify-center gap-2">
+                <i data-lucide="save" class="icon-sm"></i>
+                <span>Set Metadata CID</span>
+              </button>
+            </div>
+          </div>
         </div>
-        <label class="field-label mt-3">Or paste CID</label>
-        <input id="mdCid" class="field-input" placeholder="bafy..." />
-        <button id="setCidBtn" class="btn-primary mt-2 w-full flex items-center justify-center gap-2">
-          <i data-lucide="save" class="icon-sm"></i>
-          <span>Set Metadata CID</span>
-        </button>
       </div>
     </main>
 
